# Speculo-plugin_template

./: .gitmodules  CMakeLists.txt  README.md  library.cpp  library.h  vcpkg.json
